@@ -1,7 +1,12 @@
 	All notable changes to this project will be documented in this file.
 
 	* 0.3.0 - preview
+
+	Add
 	- Make the comment line not splitted, keep it is.
+
+	Fix
+	- Stop spliting the whitespaces in the strings (simple version).
 
 	* 0.2.0 - Nov 17th, 2019
 
